--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./src/style.css">
   </head>
   <body>
+    <div class="custom-cursor" id="cursor"></div>
+    
     <!-- Overlay Layer -->
     <div class="overlay"></div>
 
